--- a/src/main/resources/swagger/stocky-service.yml
+++ b/src/main/resources/swagger/stocky-service.yml
@@ -244,7 +244,7 @@ definitions:
   StockListResponse:
     description: List of stocks along with page index and its size.
     properties:
-      stocksList:
+      stocksDetailList:
         type: array
         items:
           $ref: '#/definitions/StockDetailResponse'
@@ -298,7 +298,7 @@ definitions:
         type: integer
       error:
         description: Error description in human readble format.
-        type: String
+        type: string
       message:
         description: Reason the error occured.
         type: string
