--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+logging.level.org.hibernate.type=trace
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,info,metrics,threaddump,heapdump
