--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.h2.console.path=/h2-console
 logging.level.org.hibernate.type=trace
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health,info,metrics,threaddump,heapdump
+spring.h2.console.settings.web-allow-others=true
