--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>stocky</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>stocky</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Stocky Service</description>
 
 	<properties>
 		<java.version>1.8</java.version>
